Added usecases
